plugins {
	id 'java'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.10'
	id 'org.beryx.jlink' version '2.24.1'
}

java {
	sourceCompatibility = JavaVersion.VERSION_16;
	targetCompatibility = JavaVersion.VERSION_16;
}

// gradle verison > 6.6.1 error
// group 'org.beuwi.msgbot-simulator'

// 현재 JavaFX 15는 에디터 로딩 시 깨져서 로딩되는 문제점이 있음
javafx {
	version = '16'
	modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing']
}


application {
	mainModule = "msgbots"
	mainClassName = "org.beuwi.msgbots.Launcher"
}

repositories {
	mavenCentral()
	jcenter()
}

dependencies {
	implementation fileTree(dir: 'libs', include: ['*.jar'])

	// implementation group: 'net.java.dev.jna', name: 'jna', version: '5.8.0'
	// implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.8.0'

	// implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
	// implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10' // 호환성이 안 좋아서 배제시킴
	// implementation group: 'org.mozilla', name: 'rhino', version: '1.7.13'
	/* implementation (group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1') {
		exclude group: 'org.hamcrest', module: 'hamcrest-core'
	} */
}

compileJava {
	options.encoding = "UTF-8"
	options.compilerArgs << "-Xlint:none"

    moduleOptions {
        addExports = [
                'javafx.control/com.sun.javafx.scene.control' : 'org.beuwi.msgbots',
                'javafx.graphics/com.sun.javafx.scene' : 'org.beuwi.msgbots',
                'javafx.base/com.sun.javafx.event' : 'org.beuwi.msgbots',
        ]
    }
}


run {

    moduleOptions {
        addExports = [
                'javafx.control/com.sun.javafx.scene.control' : 'org.beuwi.msgbots',
                'javafx.graphics/com.sun.javafx.scene' : 'org.beuwi.msgbots',
                'javafx.base/com.sun.javafx.event' : 'org.beuwi.msgbots',
        ]
    }
	/* moduleOptions {
		addExports = [
				'javafx.control/com.sun.javafx.scene.control' : 'org.beuwi.msgbots',
				'javafx.graphics/com.sun.javafx.scene' : 'org.beuwi.msgbots',
				'javafx.base/com.sun.javafx.event' : 'org.beuwi.msgbots',
		]
		addOpens = [
				'javafx.control/com.sun.javafx.scene.control' : 'org.beuwi.msgbots',
				'javafx.graphics/com.sun.javafx.scene' : 'org.beuwi.msgbots',
				'javafx.base/com.sun.javafx.event' : 'org.beuwi.msgbots',
		]
	} */
	/* jvmArgs '--add-exports', 'javafx.web/com.sun.webkit=ALL-UNNAMED',
			'--add-exports', 'javafx.graphics/com.sun.javafx.scene.graphics=ALL-UNNAMED',
			'--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
			'--add-exports', 'javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
			'--add-exports', 'javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
			'--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED' */
}

jlink {
	options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

	launcher {
		name = 'Simulator'
	}

	mergedModule {
		requires 'javafx.graphics'
		requires 'javafx.base'
	}

	jpackage {
		imageOptions += ['--icon', 'src/main/resources/icon/program.ico']

		/* installerOptions = [
				'--vendor', 'beuwi',
				'--app-version', '0.5.0',
		] */
	}
}

jar {
	manifest {
		attributes 'Main-Class': "org.beuwi.msgbots.Launcher"
	}

	/* from {
		configurations.compile.collect {
			it.isDirectory() ? it : zipTree(it)
		}
	} */
}